--- a/Estrutura.Repository/Estrutura.Repository.csproj
+++ b/Estrutura.Repository/Estrutura.Repository.csproj
@@ -33,9 +33,15 @@
     <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="Dapper.SimpleCRUD, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.SimpleCRUD.2.0.0\lib\net45\Dapper.SimpleCRUD.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\FilterClause.cs" />
+    <Compile Include="Common\FIlterOperator.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="Implementation\Repository.cs" />
+    <Compile Include="Implementation\RepositoryModel.cs" />
+    <Compile Include="Interface\IRepository.cs" />
+    <Compile Include="Interface\IRepositoryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlBaseRepository.cs" />
     <Compile Include="StatesRepository.cs" />
