--- a/Estrutura.Repository/packages.config
+++ b/Estrutura.Repository/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net471" />
+  <package id="Dapper.SimpleCRUD" version="2.0.0" targetFramework="net471" />
 </packages>
